--- a/csvViewer.ipynb
+++ b/csvViewer.ipynb
@@ -23,146 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     dataid  totoalConsumption  morningMean   morningSTD    noonMean  \\\n",
-      "0        35              11222    13.896175    13.590624    4.185792   \n",
-      "1        44               9396    12.020833    11.702011    7.125000   \n",
-      "2        77               5820     8.699454     6.069034    2.770492   \n",
-      "3        94              23716    27.622951    24.022415    9.344262   \n",
-      "4       114              17004    20.918033    23.307609    7.469945   \n",
-      "5       187              22220    22.316770    21.393800   14.689441   \n",
-      "6       222              65224    49.704918    71.696921   43.519126   \n",
-      "7       252              22120    31.743169    39.769893   11.196721   \n",
-      "8       370              12936     9.295082    11.688597   10.109290   \n",
-      "9       483              22774    27.256831    36.815663    9.153005   \n",
-      "10      484              14876    11.650273    11.093644    8.404372   \n",
-      "11      661              25900    49.065574    47.328708   10.218579   \n",
-      "12      739              14154    20.234973    17.185090    4.961749   \n",
-      "13      744              23022    27.234973    32.251987    8.245902   \n",
-      "14      871              15700    25.098361    29.017635    2.229508   \n",
-      "15     1042              15336    23.546961    33.201116    8.364641   \n",
-      "16     1086              21762    35.961749    33.859621   12.562842   \n",
-      "17     1103              13878    28.041667    34.309959   10.383333   \n",
-      "18     1185              20412    27.989071    30.099106   54.584699   \n",
-      "19     1283              24588    41.081967    29.775643   19.158470   \n",
-      "20     1403                966    10.500000    13.561588    7.055556   \n",
-      "21     1415              17866    18.341615    18.924205   12.440994   \n",
-      "22     1507              32354    47.071038    32.477321   14.950820   \n",
-      "23     1556              17504   -64.415301  2082.092183    7.021858   \n",
-      "24     1589              35106    45.131148    44.755612   10.994536   \n",
-      "25     1619              10176    12.161491    15.114018    4.496894   \n",
-      "26     1697              20104    20.568306    23.836522   11.907104   \n",
-      "27     1714              23116    38.005464    41.659365    6.196721   \n",
-      "28     1718              19904    32.038251    35.674051    7.442623   \n",
-      "29     1790              56828    52.163934    59.153828   40.338798   \n",
-      "..      ...                ...          ...          ...         ...   \n",
-      "127    7965              18214    15.683908     9.775531   13.212644   \n",
-      "128    7989              14254    32.885350    26.699309    6.898089   \n",
-      "129    8059              10562    12.558442    15.687694    7.227273   \n",
-      "130    8084              10500    12.896175    22.769338    7.907104   \n",
-      "131    8086              20978    38.366120    47.862306   16.038251   \n",
-      "132    8155              18200    20.093168    23.270700    8.652174   \n",
-      "133    8156              18474   217.573770  1835.661779   39.213115   \n",
-      "134    8244               3406    62.789474    28.520683   18.210526   \n",
-      "135    8386              10050    12.566667    10.775538   10.950000   \n",
-      "136    8467               9556     8.401099     9.171060    6.049451   \n",
-      "137    8703              17024    14.529412    12.335113   11.923529   \n",
-      "138    8829              20010    36.098361    38.704304    7.480874   \n",
-      "139    8890              30162    32.661202    31.919211    8.792350   \n",
-      "140    8967               2128     2.942675     6.934858    1.350318   \n",
-      "141    9052              27936    26.223602    31.056145   10.279503   \n",
-      "142    9121              25192    32.289617    28.425884   17.191257   \n",
-      "143    9134              39492   705.284153  4439.564804 -354.240437   \n",
-      "144    9160               4172    35.578947    21.835065   33.736842   \n",
-      "145    9278              15096    10.590164    21.862494    9.601093   \n",
-      "146    9295              26108    32.081967    32.534788   14.628415   \n",
-      "147    9474              27832    23.043956    21.226363   18.071429   \n",
-      "148    9600               3366    38.052632    24.134434   14.210526   \n",
-      "149    9620              33960    31.750000    12.403599   31.352941   \n",
-      "150    9631              16152    20.377049    26.878901    8.786885   \n",
-      "151    9639              43762    48.688889    36.981721   22.088889   \n",
-      "152    9729              15960    30.595628    36.216266    5.355191   \n",
-      "153    9766              21390    17.595628    17.176372   14.092896   \n",
-      "154    9849               5660     4.049180     3.539440    4.453552   \n",
-      "155    9956              11182    14.984733    17.400529    8.702290   \n",
-      "156    9982              13978    15.213115    17.673834  141.672131   \n",
-      "\n",
-      "         noonSTD   nightMean     nightSTD  \n",
-      "0       6.020767   15.715847    11.216504  \n",
-      "1       4.046389    7.861111     4.562241  \n",
-      "2       4.712708    5.836066     4.740871  \n",
-      "3      14.512725   17.453552    18.414676  \n",
-      "4      11.509460   15.464481    23.411911  \n",
-      "5      13.303545   16.565217    15.865813  \n",
-      "6      78.456688   36.262295    67.898003  \n",
-      "7      21.371412   14.994536    18.927384  \n",
-      "8      14.234149   10.491803    11.524205  \n",
-      "9      18.643289   17.562842    25.213734  \n",
-      "10      9.762221   13.371585    11.715370  \n",
-      "11     13.133875   12.284153    15.050593  \n",
-      "12      7.815052    7.065574    10.318749  \n",
-      "13     11.401259   12.251366    16.358757  \n",
-      "14      6.300473    5.622951     9.916312  \n",
-      "15      9.535608    9.795580    17.896485  \n",
-      "16     12.281985   13.464481    17.403209  \n",
-      "17     13.147993   12.250000    15.734384  \n",
-      "18    644.226925   83.770492   722.056180  \n",
-      "19     22.689687   13.196721    11.553373  \n",
-      "20      8.573034    4.555556     5.046696  \n",
-      "21     12.313627   13.298137    11.732444  \n",
-      "22     16.280425   11.956284    11.323762  \n",
-      "23      9.725161  -32.502732  1345.197821  \n",
-      "24     17.203220   13.021858    20.312035  \n",
-      "25      6.339391    5.863354     7.892521  \n",
-      "26     13.361191   15.879781    10.344174  \n",
-      "27      9.681518   10.404372    22.258550  \n",
-      "28      9.855000   14.464481    17.653854  \n",
-      "29     64.249811   48.721311    69.879161  \n",
-      "..           ...         ...          ...  \n",
-      "127     6.225242   12.821839     5.915826  \n",
-      "128    10.793478   15.579618    11.235820  \n",
-      "129     6.938059    7.097403     7.559950  \n",
-      "130    11.464228    8.256831    13.454016  \n",
-      "131    19.781143   11.196721    12.670890  \n",
-      "132    14.348485    8.428571    14.583116  \n",
-      "133  1571.311197  205.568306  1839.144317  \n",
-      "134    13.535835   12.526316     9.511037  \n",
-      "135     8.799479    8.366667     7.072168  \n",
-      "136     9.201217    7.895604     9.730720  \n",
-      "137     8.009555   11.347059     7.743887  \n",
-      "138    11.909881   13.683060    17.063625  \n",
-      "139    14.893815   16.289617    19.295750  \n",
-      "140     2.485285    2.592357     5.553395  \n",
-      "141    16.504925   16.142857    21.851804  \n",
-      "142    18.029470   11.781421    10.471731  \n",
-      "143  3487.321884  579.994536  4241.554857  \n",
-      "144    19.149941   19.000000    16.543404  \n",
-      "145    20.968866   19.344262    29.698973  \n",
-      "146    15.713405   15.967213    15.792335  \n",
-      "147    13.672800   19.928571    15.311432  \n",
-      "148     8.971176   23.578947    14.284020  \n",
-      "149    12.130133   31.036765    11.128533  \n",
-      "150    13.372488   10.158470    10.864894  \n",
-      "151    21.158998   19.511111    23.236104  \n",
-      "152     7.516071    9.907104     9.299339  \n",
-      "153    13.127250   15.344262    11.657056  \n",
-      "154     6.023340    5.234973     5.424543  \n",
-      "155     8.379997   11.351145    12.050735  \n",
-      "156  1288.859818   11.245902     9.485086  \n",
-      "\n",
-      "[157 rows x 8 columns]\n"
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-59a53ecd6562>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/reading_features.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(path+\"/reading_features.csv\")\n",
-    "print (df)\n"
+    "\n",
+    "df.shape[2]\n"
    ]
   },
   {
