--- a/Interim submission/Interim.ipynb
+++ b/Interim submission/Interim.ipynb
@@ -327,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total: 178s\n"
+      "total: 164s\n"
      ]
     }
    ],
@@ -475,19 +475,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# disable chained assignments\n",
+    "pd.options.mode.chained_assignment = None \n",
+    "\n",
     "# create a new dataframe with random values inserted\n",
     "top_corr = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (5 * len(idList), 3)), columns = ['HH1', 'HH2', 'corr']).reset_index(drop = True)\n",
     "\n",
