fix setting with copy warning in 1.3

--- a/Interim submission/Interim.ipynb
+++ b/Interim submission/Interim.ipynb
@@ -473,13 +473,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# disable chained assignments\n",
-    "pd.options.mode.chained_assignment = None \n",
-    "\n",
     "# create a new dataframe with random values inserted\n",
     "top_corr = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (5 * len(idList), 3)), columns = ['HH1', 'HH2', 'corr']).reset_index(drop = True)\n",
     "\n",
@@ -494,9 +491,9 @@
     "for i in corr.columns[:]:\n",
     "    temp_corr = corr.nlargest(5, i)\n",
     "    for j in range (0, 5):\n",
-    "        top_corr.HH1.count = i\n",
-    "        top_corr.HH2.count = temp_corr.index[j]\n",
-    "        top_corr['corr']['count'] = temp_corr[i].iloc[j]\n",
+    "        top_corr['HH1'].iloc[count] = i\n",
+    "        top_corr['HH2'].iloc[count] = temp_corr.index[j]\n",
+    "        top_corr['corr'].iloc[count] = temp_corr[i].iloc[j]\n",
     "        count += 1\n",
     "\n",
     "# export top_corr dataframe as csv file\n",
