--- a/Interim submission/4211_1.3.ipynb
+++ b/Interim submission/4211_1.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,30 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:36: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:37: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:38: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1.3\n",
     "hourly_reading = pd.read_csv('./hourly_readings_final.csv')\n",
@@ -74,9 +55,9 @@
     "for i in corr.columns[:]:\n",
     "    temp_corr = corr.nlargest(5, i)\n",
     "    for j in range (0, 5):\n",
-    "        top_corr['HH1'][count] = i\n",
-    "        top_corr['HH2'][count] = temp_corr.index[j]\n",
-    "        top_corr['corr'][count] = temp_corr[i].iloc[j]\n",
+    "        top_corr['HH1'].iloc[count] = i\n",
+    "        top_corr['HH2'].iloc[count] = temp_corr.index[j]\n",
+    "        top_corr['corr'].iloc[count] = temp_corr[i].iloc[j]\n",
     "        count += 1\n",
     "\n",
     "# export top_corr dataframe as csv file\n",
