Added 1.1 and 1.2 description

--- a/Interim submission/Interim.ipynb
+++ b/Interim submission/Interim.ipynb
@@ -10,23 +10,30 @@
     "\n",
     "<font size = \"3\">This part of the code finds the number of houses in to whole dataset,<br>\n",
     "outputs <b><i>clean_df</i></b> csv for further processing,<br>\n",
-    "marks out the time period of all malfunction meter</font><br>\n",
+    "marks out the time period of all malfunction meter</font><br><br>\n",
+    "\n",
+    "In 1.1 we are supposed to generate a collections malfunction. We will first need to define what data points are counted as<br> malfunction, then we need to extract them. We have defined malfunction to be of these types:<br><br>\n",
+    " 1: data reported back when change in gas use is < 2 cubic foot<br>\n",
+    " 2: data reported back new meter_value is smaller than old meter_value<br>\n",
+    " 3: data reported back is >2, but time > 15s, threshold value for reporting malfunction will be 7 cubic foot/hr<br> \n",
+    " (US household average daily usage = 168 cubic foot)<br>\n",
+    " 4: However, continuous report of same reading from same id over 12hrs,<br>\n",
+    " the first reading after 12hrs will be treated as good reading,<br>\n",
+    " as the gas company will probably want to know whether is a meter malfunctioning<br>\n",
+    " even though its reading did not change for a period of time<br><br>\n",
+    "\n",
+    "And these are the main problems that we encountered,<br>\n",
+    "- Finding efficient method to loop through the whole dataset, extracting what we want<br>\n",
+    "- Looping through the dataset, removing what we don't want.<br>\n",
+    "\n",
     "</body>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of houses = 157\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -48,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +63,7 @@
      "output_type": "stream",
      "text": [
       "2015-10-01 00:14:44\n",
-      "Length of df: 1584823\n"
+      "('Length of df:', 1584823)\n"
      ]
     }
    ],
@@ -74,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of bad_array: 169130\n",
-      "Length of to_drop: 1257748\n"
+      "('Length of bad_array:', 169130)\n",
+      "('Length of to_drop:', 1257748)\n"
      ]
     }
    ],
@@ -200,13 +207,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>1.2</h1>"
+    "<h1>1.2</h1>\n",
+    "In 1.2 we are supposed to generate hourly readings for different ids. The hourly readins will starts from the fisrt availble data point and end at the last available data point of the particular id, since we can hardly deduce the data point prior to the first point and after the last point. \n",
+    "\n",
+    "There are three main cases that we need to handle: \n",
+    "1. A few (more than 1) consecutive data are within the same hour: in this case, we keep the last reading as the hourly reading because the last reading reflects the highest consumption of the hour\n",
+    "2. The two consecutive datas are consecutive in time as well: in this case, we can savely keep the prior reading of the pair as the hourly reading.\n",
+    "3. The two consecutive datas are more than one hour apart: in this case, there is missing data in between the two points and we need to fill in. This case can be furthure separated to 3 sub-cases:\n",
+    "    3.1--The two consecutive data have identical meter_value: this means that there is no increase in value throughout the preiod, hence the missing hours have reading same as the closet available data.\n",
+    "    3.2--The two consecutive data have different value and the value is less than 4: this means that there is increase during the period, but this increase is very likely to occur in the last hour, hence we will let missing hours' reading equal to their previous closest available reading.\n",
+    "    3.3--The two consecutive data have different value and the value is more than 4: in this case, there is high possibility that in some hours, there is consumption but the meter fails to report. Hence, we will evenly distribute the difference among the missing hours. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -233,6 +251,8 @@
     }
    ],
    "source": [
+    "#import result from 1.1\n",
+    "\n",
     "gas_data = pd.read_csv(\"clean_df.csv\")\n",
     "len(gas_data)"
    ]
@@ -240,10 +260,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#preprocessing data for easier computation in the following \n",
+    "#preprocessing data for easier computation in the following: change datatype of 'localminute' to datetime\n",
+    "#change datatype of 'meter_value' to float\n",
+    "\n",
     "start_time = timeit.default_timer()\n",
     "gas_data.localminute = gas_data.localminute.str.slice(0,19)\n",
     "gas_data.localminute = pd.to_datetime(gas_data.localminute, infer_datetime_format = True, \n",
@@ -255,22 +279,26 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#gas_data=gas_data[gas_data['dataid']==35];\n",
     "ind=0;\n",
-    "_hr=dt.timedelta(hours=1); #creating a constant timedelta object with value =1 hr for comparison\n",
+    "#creating a constant timedelta object with value =1 hr for comparison\n",
+    "_hr=dt.timedelta(hours=1);\n",
     "temp_gas_hr=pd.DataFrame(columns=gas_data.columns);\n",
     "temp_gas_hr=gas_data;\n",
-    "id_list=gas_data['dataid'].unique();#creating an id list for itertaion since only comparison of reading within id \n",
-    "                                     #is meanningful\n",
+    "id_list=gas_data['dataid'].unique();\n",
+    "#creating an id list for itertaion since only comparison of reading within id is meanningful\n",
     "\n",
+    "#creating dummy list for appending later\n",
     "missing_lm=[];\n",
     "missing_id=[];\n",
     "missing_val=[];\n",
     "\n",
     "for _id in id_list:\n",
+    "    \n",
     "    #generate hourly readings according to dataid\n",
     "    temp_gas_data=gas_data[gas_data['dataid']==_id];\n",
     "    temp_gas_data.reset_index(drop=True,inplace=True);\n",
@@ -279,13 +307,19 @@
     "        if(row.Index==0):\n",
     "            prev_row=pd.Series(data=[row.localminute,row.dataid,row.meter_value]\n",
     "                               ,index=['localminute','dataid','meter_value']);\n",
-    "            #unable to predict datapoints before the first available datapoint\n",
+    "            #unable to predict datapoints before the first available datapoint and afer the last datapoint\n",
+    "            #hence the hourly reading starts from the first available local minute and end at the last one.\n",
     "        else:\n",
+    "            \n",
     "            time_diff=row.localminute-prev_row.localminute;\n",
     "            #determine if there is any missing data before two consecutive available data\n",
+    "            #if there is the difference in hour of two consecutive available data is large than one\n",
+    "            #there is missing data\n",
+    "            \n",
     "            if(time_diff>_hr):\n",
     "                time_diff=int(time_diff.total_seconds()/3600);\n",
     "                #determine how many datapoints are missing\n",
+    "                \n",
     "                for j in range (1,time_diff):\n",
     "                    if ((row.meter_value-prev_row.meter_value)>4):\n",
     "                        #if the difference between two available datepoint is too large,\n",
@@ -309,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#concatenate the missing data with original data\n",
@@ -334,6 +370,7 @@
    "source": [
     "temp_gas_hr=temp_gas_hr.sort_values(by=['dataid','localminute']);\n",
     "temp_gas_hr.drop_duplicates(['localminute','dataid'],keep='last',inplace=True); \n",
+    "\n",
     "#for the same hour, if there is multiple readings, keep the highest value\n",
     "temp_gas_hr['meter_value']=temp_gas_hr['meter_value'].astype(int)\n",
     "print(\"total: %ds\" %(timeit.default_timer() - start_time))"
@@ -342,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp_gas_hr.to_csv('hourly_readings_final.csv',index=False);"
@@ -357,28 +396,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "157"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(id_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# gas_hr=temp_gas_hr;\n",
@@ -414,7 +435,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -453,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# split the gas meter readings based on data id\n",
@@ -474,7 +499,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create a new dataframe with random values inserted\n",
