--- a/Interim submission/4211_1.4.ipynb
+++ b/Interim submission/4211_1.4.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Clustering is a collection of same group similar or data objects or in other groups.Its also finding the dissimilar to the data objects in other groups.In cluster analysis, the main objective is to find similarities between data objects with the help of specific characteristics found in the data and grouping these similar data objects into clusters. In our project, the following features and their respective standard deviation will be examined in the folloing clustering discussion.</h3>"
+    "<h3>Clustering is a collection of same group similar or data objects or in other groups.Its also finding the dissimilar to the data objects in other groups.In cluster analysis, the main objective is to find similarities between data objects with the help of specific characteristics found in the data and grouping these similar data objects into clusters. In our project, the following features and their respective standard deviation will be examined in the following clustering discussion.</h3>"
    ]
   },
   {
@@ -161,8 +161,6 @@
     "        currentNight = 0\n",
     "        \n",
     "    if (currentID != row.dataid):\n",
-    "        if (currentID == 9134):\n",
-    "            print (noonConsumption)\n",
     "        features = []\n",
     "        morningMean = np.mean(morningConsumption)\n",
     "        morningSTD = np.std(morningConsumption)\n",
