change code for 1.3, use average hourly consumption to calculate correlation

--- a/Interim submission/Interim.ipynb
+++ b/Interim submission/Interim.ipynb
@@ -449,7 +449,9 @@
     "<h1>1.3</h1>\n",
     "In 1.3 we are required to compute the correlations between the gas consumption of every two households, and for each household, find out 5 other households with the highest correlation in gas consumption.\n",
     "\n",
-    "This part of the code reads the <b><i>hourly_readings_final</i></b>.csv file which is generated in the previous section (1.2) and outputs <b><i>top_correlated_households</i></b>.csv. The correlation is calculated is based on the hourly readings for each household, as this method gives the same result as calculating based on hourly gas consumption for each household."
+    "This part of the code reads the <b><i>hourly_readings_final</i></b>.csv file which is generated in the previous section (1.2) and outputs <b><i>top_correlated_households</i></b>.csv. The main problem faced in this section is how the correlation should be computed. The initial idea was to calculate only based on hourly readings computed in 1.2 without considering time. However, many of the households do not have complete data, which means in some month, these households do not have any meter readings. Thus simply computing correlation based on hourly readings is not sufficient.\n",
+    "\n",
+    "The method used for 1.3 is to compute the average gas consumption for each household in each hour. The hourly consumption is computed first by comparing the readings between adjacent readings for the same household. After getting the hourly consumption, the mean of all readings in each hour is computed, as it is reasonable to say that by including more data points, the average can be more representative compared to taking a few data points. For each household, there are 24 data points for average hourly consumption, representing the 24 hours. Correlation matrix can be computed from the average hourly consumption, and the top 5 households with highest correlation can be found"
    ]
   },
   {
@@ -485,13 +487,18 @@
    ],
    "source": [
     "# 1.3\n",
+    "# import result obtained from 1.2\n",
     "hourly_reading = pd.read_csv('./hourly_readings_final.csv')\n",
     "\n",
     "# get the list of dataids\n",
     "idList = hourly_reading['dataid'].drop_duplicates(keep = 'first')\n",
     "idList = idList.reset_index(drop = True)\n",
     "\n",
-    "len(idList)"
+    "# split the column 'localminute' into 'day' and 'time'\n",
+    "new_time = hourly_reading['localminute'].str.split(\" \", n = 1, expand = True)\n",
+    "hourly_reading['day'] = new_time[0]\n",
+    "hourly_reading['time'] = new_time[1]\n",
+    "hourly_reading.drop(columns = ['localminute'], inplace = True)"
    ]
   },
   {
@@ -502,19 +509,28 @@
    },
    "outputs": [],
    "source": [
-    "# split the gas meter readings based on data id\n",
-    "# create a dataframe with only meter readings\n",
-    "# the columns are all the different data ids\n",
-    "rd = pd.DataFrame(columns = idList)\n",
-    "for i in range(0, len(idList)):\n",
-    "    rd[idList[i]] = hourly_reading.loc[hourly_reading.dataid == idList[i]]['meter_value'].reset_index(drop = True)\n",
+    "# add the 'diffs' column which shows the hourly consumption by each household\n",
+    "# the function diff() computes the difference between the current data point and the previous data point\n",
+    "# therefore the data points at the boundary (data id changes) are wrong and will be changed to NaN\n",
+    "hourly_reading['diffs'] = hourly_reading['meter_value'].diff()\n",
+    "mask = hourly_reading.dataid != hourly_reading.dataid.shift(1)\n",
+    "hourly_reading['diffs'][mask] = np.nan\n",
     "\n",
-    "# compute the correlation matrix of the new dataframe\n",
-    "corr = rd.corr()\n",
-    "\n",
-    "# remove the 1s in diagonal\n",
-    "# as the correlation between a column and itself is always 1\n",
-    "corr -= np.eye(corr.shape[0])"
+    "# compute the average hourly consumption by each household\n",
+    "# save all the values in the average_hourly_consumption dataframe created\n",
+    "HH_count = 0\n",
+    "average_hourly_consumption = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (24, len(idList))), columns = idList)\n",
+    "for col in idList:\n",
+    "    print(col)\n",
+    "    for hr in range (0, 23):\n",
+    "#         set the criteria for selecting the data points\n",
+    "        if hr < 10:\n",
+    "            criterion = hourly_reading['time'].map(lambda x: (x[0] ==  '0') & (x[1] == str(hr)))\n",
+    "        if hr >= 10:\n",
+    "            criterion = hourly_reading['time'].map(lambda x: (x[0] == str(hr)[0]) & (x[1] ==  str(hr)[1]))\n",
+    "#         compute the mean of hourly consumption for each household and insert into average_hourly_consumption dataframe\n",
+    "        average_hourly_consumption[col].iloc[hr] = hourly_reading.loc[(hourly_reading.dataid == col) & criterion]['diffs'].mean()\n",
+    "    HH_count += 1"
    ]
   },
   {
@@ -525,13 +541,27 @@
    },
    "outputs": [],
    "source": [
+    "# compute the correlation matrix of the new dataframe\n",
+    "corr = average_hourly_consumption.corr()\n",
+    "\n",
+    "# remove the 1s in diagonal\n",
+    "# as the correlation between a column and itself is always 1\n",
+    "corr -= np.eye(corr.shape[0])\n",
+    "\n",
     "# create a new dataframe with random values inserted\n",
     "top_corr = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (5 * len(idList), 3)), columns = ['HH1', 'HH2', 'corr']).reset_index(drop = True)\n",
     "\n",
     "# set 'corr' column data type as float64\n",
     "# since correlation value is a floating point between 0 and 1\n",
-    "top_corr['corr'] = top_corr['corr'].astype(float)\n",
-    "\n",
+    "top_corr['corr'] = top_corr['corr'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# loop through all data ids in the correlation matrix\n",
     "# for each data id, find out the 5 data ids with the highest correlation values\n",
     "# collate all results in the top_corr dataframe\n",
