edit interim and 1.3 to remove setting with copy warning

--- a/Interim submission/4211_1.3.ipynb
+++ b/Interim submission/4211_1.3.ipynb
@@ -55,15 +55,13 @@
     "# the function diff() computes the difference between the current data point and the previous data point\n",
     "# therefore the data points at the boundary (data id changes) are wrong and will be changed to NaN\n",
     "hourly_reading['diffs'] = hourly_reading['meter_value'].diff()\n",
-    "mask = hourly_reading.dataid != hourly_reading.dataid.shift(1)\n",
-    "hourly_reading['diffs'][mask] = np.nan\n",
+    "mask = (hourly_reading.dataid != hourly_reading.dataid.shift(1))\n",
+    "hourly_reading.loc[mask, 'diffs'] = np.nan\n",
     "\n",
     "# compute the average hourly consumption by each household\n",
     "# save all the values in the average_hourly_consumption dataframe created\n",
-    "HH_count = 0\n",
     "average_hourly_consumption = pd.DataFrame(np.random.randint(low = 0.0, high = 10.0, size = (24, len(idList))), columns = idList)\n",
     "for col in idList:\n",
-    "    print(col)\n",
     "    for hr in range (0, 23):\n",
     "#         set the criteria for selecting the data points\n",
     "        if hr < 10:\n",
@@ -71,8 +69,7 @@
     "        if hr >= 10:\n",
     "            criterion = hourly_reading['time'].map(lambda x: (x[0] == str(hr)[0]) & (x[1] ==  str(hr)[1]))\n",
     "#         compute the mean of hourly consumption for each household and insert into average_hourly_consumption dataframe\n",
-    "        average_hourly_consumption[col].iloc[hr] = hourly_reading.loc[(hourly_reading.dataid == col) & criterion]['diffs'].mean()\n",
-    "    HH_count += 1"
+    "        average_hourly_consumption.loc[hr, col] = hourly_reading.loc[(hourly_reading.dataid == col) & criterion]['diffs'].mean()"
    ]
   },
   {
@@ -109,9 +106,9 @@
     "for i in corr.columns[:]:\n",
     "    temp_corr = corr.nlargest(5, i)\n",
     "    for j in range (0, 5):\n",
-    "        top_corr['HH1'].iloc[count] = i\n",
-    "        top_corr['HH2'].iloc[count] = temp_corr.index[j]\n",
-    "        top_corr['corr'].iloc[count] = temp_corr[i].iloc[j]\n",
+    "        top_corr.loc[count, 'HH1'] = i\n",
+    "        top_corr.loc[count, 'HH2'] = temp_corr.index[j]\n",
+    "        top_corr.loc[count, 'corr'] = temp_corr[i].iloc[j]\n",
     "        count += 1\n",
     "\n",
     "# export top_corr dataframe as csv file\n",
