Update csv's and prep interim

--- a/Interim submission/4211_1.1.ipynb
+++ b/Interim submission/4211_1.1.ipynb
@@ -447,7 +447,7 @@
     "        prev_good = True\n",
     "        _id = row.dataid\n",
     "    # for estimating time take to process actual data\n",
-    "    if (row.Index == 1583860):\n",
+    "    if (row.Index == 0):\n",
     "        continue\n",
     "    #1 and #2\n",
     "    if (((row.meter_value <= df.meter_value[row.Index-1])\n",
