Update graph comments

--- a/Interim submission/Interim.ipynb
+++ b/Interim submission/Interim.ipynb
@@ -398,7 +398,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><font color = \"red\">Run this cell only if generating graphs</font></h1>"
+    "<h1><font color = \"red\">Run this cell only if generating graphs</font></h1>\n",
+    "<h5>may take 3 hours</h5>"
    ]
   },
   {
